// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots helpers|useDynamicAttribute default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c4 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c1 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c1 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c1 + label:focus {
  outline: 0;
}

.c1 + label:empty {
  padding: 0 0 0 1em;
}

.c1 + label::before,
.c1 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c1 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c1 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c1:focus + label::before,
.c1 + label:hover::before {
  background-color: #999;
}

.c1:checked + label {
  color: #222;
}

.c1:checked + label::before {
  background-color: #222;
}

.c1:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.c5 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c5 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c6 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c6 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c6 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c7 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 20em;
  -ms-flex-preferred-size: 20em;
  flex-basis: 20em;
}

.c7 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c7 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c8 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 30em;
  -ms-flex-preferred-size: 30em;
  flex-basis: 30em;
}

.c8 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c8 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

<div
  className="c0"
>
  <div
    onScroll={[Function]}
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "direction": "ltr",
        "height": 600,
        "overflow": "auto",
        "position": "relative",
        "width": 400,
        "willChange": "transform",
      }
    }
  >
    <div
      style={
        Object {
          "height": 10000,
          "pointerEvents": "",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        Ayden
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="10"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="10"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 50,
            "width": "100%",
          }
        }
      >
        Larue
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="11"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="11"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 100,
            "width": "100%",
          }
        }
      >
        Helena
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="12"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="12"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 150,
            "width": "100%",
          }
        }
      >
        Margaret
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="13"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="13"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 200,
            "width": "100%",
          }
        }
      >
        Vernie
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="14"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="14"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 250,
            "width": "100%",
          }
        }
      >
        Hannah
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="15"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="15"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 300,
            "width": "100%",
          }
        }
      >
        Kaci
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="16"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="16"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 350,
            "width": "100%",
          }
        }
      >
        Clinton
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="17"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="17"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 400,
            "width": "100%",
          }
        }
      >
        Mathew
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="18"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="18"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 450,
            "width": "100%",
          }
        }
      >
        Edythe
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="19"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="19"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 500,
            "width": "100%",
          }
        }
      >
        Emerson
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="20"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="20"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 550,
            "width": "100%",
          }
        }
      >
        Bryce
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="21"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="21"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 600,
            "width": "100%",
          }
        }
      >
        Marques
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="22"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="22"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 650,
            "width": "100%",
          }
        }
      >
        Otis
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="23"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="23"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 700,
            "width": "100%",
          }
        }
      >
        Roberta
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="24"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="24"
          >
            
          </label>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots helpers|useDynamicAttribute initialValueCallback 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c3 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c4 > .c2 {
  display: block;
  font-size: 0.8125em;
  color: #999;
}

.c1 {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.c1 + label {
  position: relative;
  display: inline-block;
  padding: 0 0 0 2em;
  cursor: pointer;
  line-height: 1em;
  height: 1em;
  color: #999;
  will-change: color;
  -webkit-transition: 0.25s color ease;
  transition: 0.25s color ease;
}

.c1 + label:focus {
  outline: 0;
}

.c1 + label:empty {
  padding: 0 0 0 1em;
}

.c1 + label::before,
.c1 + label::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 1em;
  height: 1em;
  box-sizing: border-box;
  will-change: transform,background-color,color;
  -webkit-transition: 0.25s all ease;
  transition: 0.25s all ease;
}

.c1 + label::before {
  content: " ";
  border-radius: 4px;
  background-color: #eee;
}

.c1 + label::after {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1 + label::after {
  content: "\\2714";
  color: #fff;
  line-height: 1.1em;
  text-align: center;
}

.c1:focus + label::before,
.c1 + label:hover::before {
  background-color: #999;
}

.c1:checked + label {
  color: #222;
}

.c1:checked + label::before {
  background-color: #222;
}

.c1:checked + label::after {
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.c5 > .c2:first-child {
  padding-bottom: 0.625em;
  margin-right: unset;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c5 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c6 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c6 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c6 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c7 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 20em;
  -ms-flex-preferred-size: 20em;
  flex-basis: 20em;
}

.c7 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c7 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

.c8 > .c2:first-child {
  padding-bottom: unset;
  margin-right: 1.25em;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 30em;
  -ms-flex-preferred-size: 30em;
  flex-basis: 30em;
}

.c8 > .c2:first-child > .c2 {
  padding-bottom: unset;
}

.c8 > *:not(.c2):not(:last-child) {
  margin-bottom: 1.25em;
}

<div
  className="c0"
>
  <div
    onScroll={[Function]}
    style={
      Object {
        "WebkitOverflowScrolling": "touch",
        "direction": "ltr",
        "height": 600,
        "overflow": "auto",
        "position": "relative",
        "width": 400,
        "willChange": "transform",
      }
    }
  >
    <div
      style={
        Object {
          "height": 10000,
          "pointerEvents": "",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        Ayden
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="25"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="25"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 50,
            "width": "100%",
          }
        }
      >
        Larue
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="26"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="26"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 100,
            "width": "100%",
          }
        }
      >
        Helena
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="27"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="27"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 150,
            "width": "100%",
          }
        }
      >
        Margaret
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="28"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="28"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 200,
            "width": "100%",
          }
        }
      >
        Vernie
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="29"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="29"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 250,
            "width": "100%",
          }
        }
      >
        Hannah
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="30"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="30"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 300,
            "width": "100%",
          }
        }
      >
        Kaci
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="31"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="31"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 350,
            "width": "100%",
          }
        }
      >
        Clinton
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="32"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="32"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 400,
            "width": "100%",
          }
        }
      >
        Mathew
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="33"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="33"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 450,
            "width": "100%",
          }
        }
      >
        Edythe
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="34"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="34"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 500,
            "width": "100%",
          }
        }
      >
        Emerson
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="35"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="35"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 550,
            "width": "100%",
          }
        }
      >
        Bryce
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="36"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="36"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 600,
            "width": "100%",
          }
        }
      >
        Marques
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="37"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="37"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 650,
            "width": "100%",
          }
        }
      >
        Otis
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="38"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="38"
          >
            
          </label>
        </span>
      </div>
      <div
        style={
          Object {
            "height": 50,
            "left": 0,
            "position": "absolute",
            "top": 700,
            "width": "100%",
          }
        }
      >
        Roberta
        : 
        <span>
          <input
            checked={false}
            className="c1"
            id="39"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="c2 c3"
            htmlFor="39"
          >
            
          </label>
        </span>
      </div>
    </div>
  </div>
</div>
`;
